--- a/components/button/button-styles.module.scss
+++ b/components/button/button-styles.module.scss
@@ -3,11 +3,11 @@
 .button {
   all: unset;
   cursor: pointer;
-  padding: 30px;
+  padding: 15px 30px;
   background-color: transparent;
   color: $light-blue;
-  border: 1px solid $light-bue;
-  border-radius: 5px;
+  border: 1px solid $light-blue;
+  border-radius: 10px;
   font-family: Poppins;
   font-size: 16px;
   font-style: normal;
@@ -15,4 +15,5 @@
   line-height: 24px;
   letter-spacing: 0px;
   text-align: center;
+  height: fit-content;
 }
