--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 $light-background: #001f33;
 $dark-background: #081521;
@@ -17,6 +21,10 @@ a {
 
 p {
   color: rgba(255, 255, 255, 0.72);
+}
+
+.light-blue {
+  color: $light-blue;
 }
 
 span,
@@ -40,7 +48,26 @@ h2 {
   line-height: 140%;
 }
 
-@media screen and (min-width: 640px) {
+#landing {
+  h1 {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 56px;
+    letter-spacing: 0px;
+    text-align: center;
+    color: white;
+  }
+
+  h2 {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 640px) and (orientation: "landscape") {
   h1 {
     font-size: 20px;
     line-height: 180%;
@@ -49,6 +76,20 @@ h2 {
   h2 {
     font-size: 56px;
     line-height: 120%;
+  }
+
+  #landing {
+    h1 {
+      font-size: 90px;
+      line-height: 90px;
+      text-align: left;
+    }
+
+    h2 {
+      font-size: 32px;
+      line-height: 32px;
+      text-align: left;
+    }
   }
 }
 
