--- a/components/navbar/navbar-styles.module.scss
+++ b/components/navbar/navbar-styles.module.scss
@@ -25,7 +25,7 @@
       color: #ffffff;
     }
     .links {
-      display: flex;
+      display: none;
       justify-content: space-between;
       column-gap: 70px;
       align-items: center;
@@ -53,6 +53,9 @@
             background-color: $light-blue;
           }
         }
+      }
+      @media screen and (min-width: 1024px) {
+        display: flex;
       }
     }
   }
