--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,12 @@ body {
   color: white;
 }
 
+h1,
+h2,
+p {
+  text-align: center;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -37,7 +43,7 @@ li {
 h1 {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 180%;
 }
 
@@ -48,26 +54,7 @@ h2 {
   line-height: 140%;
 }
 
-#landing {
-  h1 {
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 56px;
-    letter-spacing: 0px;
-    text-align: center;
-    color: white;
-  }
-
-  h2 {
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 20px;
-    letter-spacing: 0px;
-    text-align: center;
-  }
-}
-
-@media screen and (min-width: 640px) and (orientation: "landscape") {
+@media screen and (min-width: 640px) {
   h1 {
     font-size: 20px;
     line-height: 180%;
@@ -82,12 +69,31 @@ h2 {
     h1 {
       font-size: 90px;
       line-height: 90px;
-      text-align: left;
     }
 
     h2 {
       font-size: 32px;
       line-height: 32px;
+    }
+
+    p {
+      font-size: 20px;
+      line-height: 32px;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  h1,
+  h2,
+  p {
+    text-align: left;
+  }
+
+  #landing {
+    h1,
+    h2,
+    p {
       text-align: left;
     }
   }
