--- a/sections/landing-section/landing-section-styles.module.scss
+++ b/sections/landing-section/landing-section-styles.module.scss
@@ -12,30 +12,31 @@ $typerwriter-time-mobile: 3s;
     color: white;
     position: relative;
     width: max-content;
+    overflow: hidden;
+    &::after {
+      width: 0.125em;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: white;
+      animation: typewriter 3s steps(1) 1s forwards, blink 500ms linear infinite;
+    }
     span {
       color: white;
       visibility: hidden;
+      -webkit-animation: visible 300ms linear forwards;
       animation: visible 300ms linear forwards;
       position: relative;
-      &::after {
-        width: 0.125em;
-        height: 80%;
-        content: "";
-        position: absolute;
-        bottom: 50%;
-        right: 100%;
-        transform: translateY(50%);
-        background: white;
-      }
+      max-height: 100%;
     }
 
     @for $i from 1 through 10 {
-      span:nth-child(#{$i}) {
-        animation-delay: 300ms * $i;
-        &::after {
-          animation: blink 500ms linear infinite;
-          animation-delay: 300ms * $i;
-        }
+      span:nth-of-type(#{$i}) {
+        -webkit-animation-delay: 300ms * $i;
+        animation-delay: 1000ms + 300ms * $i;
       }
     }
   }
@@ -48,20 +49,6 @@ $typerwriter-time-mobile: 3s;
     text-align: center;
   }
 
-  /*h1::after {
-    width: 0.125em;
-    height: 100%;
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: white;
-    animation: typewriter $typerwriter-time-mobile steps(10) 1s forwards,
-      blink 500ms steps(10) infinite;
-  }*/
-
   p {
     font-size: 16px;
     line-height: 24px;
@@ -72,6 +59,7 @@ $typerwriter-time-mobile: 3s;
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeInUp 2s ease calc($typerwriter-time-mobile) forwards;
+    animation-delay: 4s;
   }
 
   @media screen and (min-width: 640px) {
@@ -96,11 +84,84 @@ $typerwriter-time-mobile: 3s;
     h2,
     p {
       text-align: left;
+      margin: 0;
+    }
+    span {
+      text-align: left;
     }
   }
 
   @keyframes typewriter {
-    to {
+    0% {
+      left: 0;
+    }
+    10% {
+      left: 12.10618%;
+    }
+    20% {
+      left: 24.57977%;
+    }
+    30% {
+      left: 32.03821%;
+    }
+    40% {
+      left: 43.35446%;
+    }
+    50% {
+      left: 47.24901%;
+    }
+    60% {
+      left: 58.1056%;
+    }
+    70% {
+      left: 70.57959%;
+    }
+    80% {
+      left: 82.96133%;
+    }
+    90% {
+      left: 94.57151%;
+    }
+    100% {
+      left: 100%;
+    }
+  }
+
+  @keyframes typewriter-firstname {
+    0% {
+      left: 0;
+    }
+    25% {
+    }
+
+    50% {
+    }
+
+    75% {
+    }
+
+    100% {
+      left: 100%;
+    }
+  }
+
+  @keyframes typewriter-lastname {
+    0% {
+      left: 0;
+    }
+    20% {
+    }
+
+    40% {
+    }
+
+    60% {
+    }
+
+    80% {
+    }
+
+    100% {
       left: 100%;
     }
   }
@@ -108,6 +169,26 @@ $typerwriter-time-mobile: 3s;
   @keyframes visible {
     to {
       visibility: visible;
+    }
+  }
+  @-webkit-keyframes visible {
+    0% {
+      visibility: hidden;
+    }
+    100% {
+      visibility: visible;
+    }
+  }
+
+  @keyframes turn-invisible {
+    to {
+      visibility: hidden;
+    }
+  }
+
+  @-webkit-keyframes turn-invisible {
+    to {
+      visibility: hidden;
     }
   }
 
