--- a/components/section/section-styles.module.scss
+++ b/components/section/section-styles.module.scss
@@ -8,9 +8,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 25px 0;
   .content {
     width: 95%;
-    max-width: 1024px;
+    max-width: 1100px;
   }
 }
 
