--- a/components/section/section-styles.module.scss
+++ b/components/section/section-styles.module.scss
@@ -1,8 +1,8 @@
 @import "../../styles/colors.scss";
 
 .container {
-  width: 100vw;
-  min-width: 100vw;
+  width: 100%;
+  min-width: 100%;
   min-height: 100vh;
   max-height: 1080px;
   display: flex;
