slider is working

--- a/components/portfolio-card/portfolio-card-styles.module.scss
+++ b/components/portfolio-card/portfolio-card-styles.module.scss
@@ -1,6 +1,10 @@
 .card_container {
   width: 300px;
   min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 18px;
+  cursor: pointer;
 
   .card {
     width: 100%;
@@ -12,6 +16,9 @@
   .description {
     width: 100%;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
     .title {
       color: white;
       font-size: 24px;
