--- a/components/portfolio-gallery/portfolio-gallery-styles.module.scss
+++ b/components/portfolio-gallery/portfolio-gallery-styles.module.scss
@@ -1,9 +1,47 @@
+@import "../../styles/colors.scss";
+
 .slider_container {
   max-width: 100%;
   width: 100%;
   height: 500px;
   position: relative;
   overflow: hidden;
+}
+
+.left_button,
+.right_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding-right: 5.5px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid $light-blue;
+  .dark_chevron {
+    display: none;
+  }
+  &:hover {
+    background-color: $light-blue;
+    .light_chevron {
+      display: none;
+    }
+    .dark_chevron {
+      display: block;
+    }
+  }
+}
+
+.right_button {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid $light-blue;
+  &:hover {
+    background-color: $light-blue;
+  }
+  transform: rotate(180deg);
 }
 
 .slider {
