--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -120,3 +120,10 @@ h2 {
 * {
   box-sizing: border-box;
 }
+
+.map-container {
+  width: 100%;
+  height: calc(100% - 88px);
+  border-radius: 8px;
+  min-height: 300px;
+}
