--- a/sections/contact-section/contact-section-styles.module.scss
+++ b/sections/contact-section/contact-section-styles.module.scss
@@ -4,14 +4,25 @@
   .row {
     width: 100%;
     position: relative;
+    .success,
     p {
-      color: rgb(236, 56, 56);
       position: absolute;
       bottom: 6px;
       font-size: 14px;
       left: 10px;
       font-weight: bold;
     }
+
+    p {
+      color: rgb(236, 56, 56);
+    }
+
+    .success {
+      color: rgb(25, 148, 25);
+      animation: disappear 1s linear forwards;
+      animation-delay: 3s;
+    }
+
     padding-bottom: 32px;
   }
   input {
@@ -28,6 +39,13 @@
       width: 100%;
     }
   }
+  textarea {
+    background: #081521;
+    color: rgba(255, 255, 255, 0.72);
+    padding: 15px 30px;
+    box-sizing: border-box;
+    border-radius: 8px;
+  }
 
   .full_width {
     width: 100%;
@@ -36,5 +54,14 @@
   .large {
     height: 150px;
     text-align: start;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+}
+
+@keyframes disappear {
+  to {
+    opacity: 0;
   }
 }
