added cv download

--- a/components/burger-menu/burger-menu-styles.module.scss
+++ b/components/burger-menu/burger-menu-styles.module.scss
@@ -39,7 +39,7 @@
   row-gap: 30px;
   right: -326px;
   top: 0;
-  a {
+  .link {
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
